<?xml version="1.0" encoding="utf-8"?>
<menu
		xmlns:appwatcher="http://schemas.android.com/apk/res-auto"
		xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
			android:id="@+id/menu_act_search"
			android:icon="@drawable/ic_search_white_24dp"
			appwatcher:showAsAction="always|collapseActionView"
			android:title="@string/menu_filter"
			appwatcher:actionViewClass="android.support.v7.widget.SearchView">
	</item>

	<item
		android:id="@+id/menu_act_addtag"
		android:icon="@drawable/ic_add_circle_white_24dp"
		appwatcher:showAsAction="ifRoom"
		android:title="@string/menu_refresh">
	</item>

	<item
		android:id="@+id/menu_act_filter"
		android:icon="@drawable/ic_flash_on_white_24dp"
		android:title="@string/filter"
		appwatcher:showAsAction="ifRoom">
		<menu>
			<group android:checkableBehavior="single">
				<item
					android:id="@+id/menu_filter_all"
					android:orderInCategory="0"
					android:title="@string/tab_all" />

				<item
					android:id="@+id/menu_filter_installed"
					android:orderInCategory="1"
					android:title="@string/tab_installed" />

				<item
					android:id="@+id/menu_filter_not_installed"
					android:orderInCategory="2"
					android:title="@string/tab_not_installed" />

				<item
					android:id="@+id/menu_filter_updatable"
					android:orderInCategory="3"
					android:title="@string/tab_updatable" />
			</group>
		</menu>
	</item>

	<item
		android:id="@+id/menu_act_sort"
		android:icon="@drawable/ic_sort_white_24dp"
		appwatcher:showAsAction="ifRoom"
		android:title="@string/sort"/>

</menu>