<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_uninstall"
        app:showAsAction="ifRoom"
        android:title="@string/uninstall" android:icon="@drawable/ic_delete_white_24dp">
    </item>

    <item
        android:id="@+id/menu_add"
        app:showAsAction="ifRoom"
        android:title="@string/menu_add" android:icon="@drawable/ic_visibility_white_24dp">
    </item>

    <item
        android:id="@+id/menu_remove"
        app:showAsAction="ifRoom"
        android:title="@string/remove" android:icon="@drawable/ic_visibility_off_white_24dp">
    </item>

    <item
        android:id="@+id/menu_tag_app"
        app:showAsAction="ifRoom"
        android:title="@string/tag" android:icon="@drawable/ic_label_black_24px">
    </item>

    <item
        android:id="@+id/menu_share"
        app:showAsAction="ifRoom"
        android:title="@string/share" android:icon="@drawable/ic_share_white_24dp">
    </item>

</menu>