<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_black_36dp"
            android:title="@string/navdrawer_item_add" />

        <item
            android:id="@+id/menu_act_refresh"
            android:icon="@drawable/ic_refresh_black_36dp"
            android:title="@string/navdrawer_item_refresh" />

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/navdrawer_item_settings" />

        <item android:id="@+id/nav_tags"
              android:icon="@drawable/ic_filter_list_black_36dp"
              android:title="@string/navdrawer_item_tags">
            <group android:checkableBehavior="single">
                <menu>

                </menu>
            </group>
        </item>
    </group>


</menu>