<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		>

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/dialog_about_text"
			android:id="@+id/about_text"
			/>

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/last_update"
			android:id="@+id/last_update"
			/>

		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_app" android:id="@+id/rate_btn"
				android:layout_gravity="center_horizontal"/>

		<Button android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="Report a problem"
				android:id="@+id/report_btn"
				android:layout_gravity="center_horizontal"/>


	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Open Source Licences"
			android:id="@+id/licences"
			android:layout_gravity="center"/>

</LinearLayout>
