<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:paddingBottom="4dp"
			  android:baselineAligned="false">

	<LinearLayout
			android:id="@+id/approw"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center_vertical"
			android:orientation="horizontal"
			android:background="@color/white"
			android:paddingTop="4dp"
			android:paddingBottom="4dp"
			>

		<ImageView
				android:id="@+id/app_icon"
				android:layout_width="@dimen/icon_size"
				android:layout_height="@dimen/icon_size"
				android:layout_gravity="center_vertical"
				android:layout_marginLeft="4dip"
				android:contentDescription="@string/application_icon"
				android:src="@drawable/ic_empty" />

		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical|clip_vertical"
				android:orientation="vertical"
				android:paddingLeft="4dp"
				android:paddingRight="4dp">

			<TextView
					android:id="@+id/title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/app_name"
					android:layout_alignParentTop="true"
					android:layout_alignParentLeft="true"
					android:textAppearance="?android:attr/textAppearanceMedium"
					/>

			<TextView
					android:id="@+id/details"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/app_name"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:layout_alignParentLeft="true"
					android:layout_below="@+id/title"
					android:textSize="12sp" />

			<TextView
					android:id="@+id/version"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/app_name"
					android:layout_alignParentLeft="true"
					android:layout_below="@+id/details"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:textSize="12sp"/>

			<TextView
					android:id="@+id/price"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/green"
					android:textSize="10sp"
					android:text="@string/installed"
					android:layout_alignParentBottom="true"
					android:layout_alignParentRight="true"/>

		</RelativeLayout>
	</LinearLayout>
</LinearLayout>