<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appwatcher="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="4dp">

    <LinearLayout
        android:id="@+id/approw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@android:id/icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dip"
            android:contentDescription="@string/application_icon"
            android:src="@drawable/ic_android_black_24dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|clip_vertical"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@android:id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/textSizeTitle" />

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@android:id/title"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/textSize" />

            <TextView
                android:id="@+id/updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/details"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/textSize" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/installed"
                android:textColor="@color/theme_accent"
                android:textSize="@dimen/textSize" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>